--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,43 +11,38 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Install toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@b3b07ba8b418998c39fb20f53e8b695cdcc8de1b
         with:
           toolchain: stable
       - name: Run cargo build (trace only)
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --no-default-features --features trace
+        run: cargo build --no-default-features --features trace
       - name: Run cargo build (logs only)
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --no-default-features --features logs
+        run: cargo build --no-default-features --features logs
       - name: Run cargo build (metrics only)
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --no-default-features --features metrics
+        run: cargo build --no-default-features --features metrics
       - name: Run cargo test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --all-features
+        run: cargo test --all-features
       - name: Run cargo fmt
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: -- --check
+        run: cargo fmt -- --check
       - name: Run cargo clippy
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: --all-features
+        run: cargo clippy --all-features
       - name: Build tracing example
-        uses: actions-rs/cargo@v1
+        run: cargo build --manifest-path examples/tracing/Cargo.toml
+  check_external_types:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Install toolchain
+        uses: dtolnay/rust-toolchain@b3b07ba8b418998c39fb20f53e8b695cdcc8de1b
         with:
-          command: build
-          args: --manifest-path examples/tracing/Cargo.toml
+          toolchain: nightly-2025-05-04
+          components: rustfmt
+      - name: Intall cargo-check-external-types
+        uses: taiki-e/install-action@52039f232923165906a3c824622a332e84ca4560 # v2.52.0
+        with:
+          tool: cargo-check-external-types@0.2.0
+      - name: Run cargo check-external-types
+        run: cargo check-external-types --all-features
