--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,13 @@ exclude = [
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
+[package.metadata.cargo_check_external_types]
+allowed_external_types = [
+    "opentelemetry_http::*",
+    "opentelemetry_sdk::*",
+    "serde_json::error::Error",
+]
+
 [features]
 default = ["trace", "metrics", "logs"]
 trace = ["opentelemetry_sdk/trace"]
