--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,9 @@
 name = "opentelemetry-application-insights"
 version = "0.44.0"
 authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
-edition = "2018"
+edition = "2021"
+rust-version = "1.75.0"
+resolver = "2"
 description = "OpenTelemetry exporter for Azure Application Insights"
 readme = "README.md"
 repository = "https://github.com/frigus02/opentelemetry-application-insights"
