Add logs pipeline example
The example shows how to add a custom log processor before the exporter,
which enriches the log record with attributes. In this case, it adds
exception attributes for error logs, so the exporter exports them as
exceptions to app insights.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,6 +107,10 @@ name = "logs"
 required-features = ["logs", "opentelemetry-http/reqwest"]
 
 [[example]]
+name = "logs_pipeline"
+required-features = ["logs", "opentelemetry-http/reqwest"]
+
+[[example]]
 name = "metrics"
 required-features = ["metrics", "opentelemetry_sdk/rt-tokio"]
 
